--- a/index.html
+++ b/index.html
@@ -29,9 +29,21 @@
       </div>
       <nav class="container__nav--menu">
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Productos</a></li>
+          <li><a href="#">Historia</a></li>
+          <li><a href="#">Referentes</a></li>
+          <li><a href="#">Obras</a></li>
+          <li><a href="#">Caracteristicas</a></li>
+          <li><a href="#">Comentarios</a></li>
           <li><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
+      <nav class="container__nav--submenu">
+        <ul class="list__menu">
+          <li><a href="#">Historia</a></li>
+          <li><a href="#">Referentes</a></li>
+          <li><a href="#">Obras</a></li>
+          <li><a href="#">Caracteristicas</a></li>
+          <li><a href="#">Comentarios</a></li>
         </ul>
       </nav>
     </header>
