--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>BauHaus</title>
     <link
       rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
+    <link
+      rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -47,7 +57,338 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="container__section">
+        <div class="container__history">
+          <div class="container__history--video">
+            <video autoplay loop muted playsinline="true">
+              <source src="assets/videos/bauhaus.mp4" type="video/mp4" />
+            </video>
+          </div>
+          <div class="container__history--text">
+            <h1>BauHaus</h1>
+            <p>
+              <strong>Escuela de Dise&ntilde;o Bauhaus</strong>&nbsp;La Bauhaus,
+              fundada en 1919 por Walter Gropius en Weimar, Alemania, fue una
+              escuela de arquitectura, dise&ntilde;o, artesan&iacute;a y
+              arte.&nbsp;Su nombre deriva de la uni&oacute;n de las palabras en
+              alem&aacute;n Bau, &ldquo;construcci&oacute;n&rdquo;, y Haus,
+              "casa".&nbsp;La Bauhaus buscaba la uni&oacute;n entre el uso y la
+              est&eacute;tica.&nbsp;Su filosof&iacute;a central era la
+              b&uacute;squeda de la armon&iacute;a entre las formas y los
+              materiales, combinando el arte con la tecnolog&iacute;a y la
+              funcionalidad.
+            </p>
+            <p>
+              <strong>Obras Primas</strong>&nbsp;Entre las obras m&aacute;s
+              emblem&aacute;ticas de la Bauhaus se encuentran:
+            </p>
+            <ol>
+              <li>Silla Wassily. 1925-26.&nbsp;Marcel Breuer</li>
+              <li>Silla Bibendum. 1926.&nbsp;Eileen Gray</li>
+              <li>MR 10. 1927.&nbsp;Mies van der Rohe</li>
+              <li>Cesca Chair. 1928.&nbsp;Marcel Breuer</li>
+              <li>Silla Basculante. 1928.&nbsp;Le Corbusier</li>
+              <li>
+                Silla Barcelona. 1929.&nbsp;Mies van der Rohe y Lily Reich
+              </li>
+              <li>Div&aacute;n Barcelona</li>
+              <li>Mesa plegable. 1924.&nbsp;Erich Brendel</li>
+              <li>Mesa Laccio. 1925.&nbsp;Marcel Breuer</li>
+              <li>Nesting Tables (o mesas nido). 1926-27.&nbsp;Josef Albers</li>
+            </ol>
+            <p>
+              <strong>Influencia en la Actualidad</strong>&nbsp;La Bauhaus ha
+              dejado un legado duradero en el mundo del dise&ntilde;o
+              gr&aacute;fico.&nbsp;Sus principios de simplicidad,
+              geometr&iacute;a y funcionalidad siguen siendo fundamentales en el
+              dise&ntilde;o gr&aacute;fico actual.&nbsp;Muchos
+              dise&ntilde;adores se inspiran en la Bauhaus para crear
+              composiciones limpias, tipograf&iacute;as legibles y colores
+              contrastantes.
+            </p>
+            <p>
+              <strong>Personajes Influenciados</strong>&nbsp;La Bauhaus tuvo
+              tres directores diferentes y decenas de profesores que dieron
+              clase a lo largo de sus 14 a&ntilde;os de existencia, entre 1919 y
+              1933.&nbsp;Algunos de los personajes clave de la Bauhaus incluyen
+              a Walter Gropius, Hannes Meyer, Ludwig Mies van der Rohe, Wassily
+              Kandinsky, Paul Klee, Oskar Schlemmer, Josef Albers, entre
+              otros.&nbsp;Estos artistas y dise&ntilde;adores han dejado una
+              huella indeleble en la historia del dise&ntilde;o y han influido
+              en generaciones de dise&ntilde;adores.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="container__section">
+        <div class="container__artists">
+          <h2>Referentes</h2>
+          <div class="container__artists--list slick--artists">
+            <div class="container__artists--card">
+              <img
+                src="assets/images/walter-gropius.jpg"
+                alt="Walter Gropius"
+              />
+              <h3>Walter Gropius</h3>
+              <p>
+                Walter Gropius fue un arquitecto alem&aacute;n y fundador de la
+                Bauhaus.&nbsp;Naci&oacute; en Berl&iacute;n en 1883 y
+                falleci&oacute; en Boston en 1969.&nbsp;Gropius fue un pionero
+                del racionalismo y del funcionalismo en la
+                arquitectura.&nbsp;Sus edificios se caracterizan por la
+                simplicidad de las formas, la claridad de la estructura y la
+                honestidad de los materiales.
+              </p>
+            </div>
+            <div class="container__artists--card">
+              <img
+                src="assets/images/walter-gropius.jpg"
+                alt="Walter Gropius"
+              />
+              <h3>Wassily Kandinsky</h3>
+              <p>
+                Vasili Vasílievich Kandinski fue un pintor ruso que también
+                teorizó sobre arte. Se lo ha considerado erróneamente el
+                precursor del arte abstracto en pintura. Se consideró durante
+                muchos años que con él comienzan la abstracción lírica y el
+                expresionismo
+              </p>
+            </div>
+            <div class="container__artists--card">
+              <img
+                src="assets/images/walter-gropius.jpg"
+                alt="Walter Gropius"
+              />
+              <h3>Lyonel Feininger</h3>
+              <p>
+                Su predilección por la arquitectura comenzó en 1913, cuando
+                instaló su estudio en Weimar. Diariamente, exploraba con su
+                bicicleta los pueblos cercanos para respirar su carácter
+                histórico, llegando cada vez más lejos. La contemplación de la
+                arquitectura tradicional alemana y las antiguas iglesias con sus
+                enhiestas torres le conmovieron, marcándole el camino en
+                detrimento del dibujo de ilustración.
+              </p>
+            </div>
+            <div class="container__artists--card">
+              <img
+                src="assets/images/walter-gropius.jpg"
+                alt="Walter Gropius"
+              />
+              <h3>Lilly Reich</h3>
+              <p>
+                Lilly Reich fue una diseñadora moderna alemana. Fue una de las
+                pocas mujeres profesoras de la Bauhaus. Estuvo asociada con
+                Ludwig Mies Van der Rohe durante más de diez años.
+              </p>
+            </div>
+            <div class="container__artists--card">
+              <img
+                src="assets/images/walter-gropius.jpg"
+                alt="Walter Gropius"
+              />
+              <h3>Ludwig Mies Van der Rohe</h3>
+              <p>
+                Mies van der Rohe dirigió la Escuela de Arte y Diseño de la
+                Bauhaus, uno de los focos principales para la evolución del
+                movimiento moderno. A lo largo de su carrera fue reconocido con
+                Medalla de Oro del RIBA (1959), la Medalla de Oro del AIA (1960)
+                y la Medalla Thomas Jefferson (1966).
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="container__section">
+        <div class="container__works">
+          <h2>Obras Iconicas</h2>
+          <div class="container__works--list">
+            <div class="container__works--item">
+              <div class="container__works--item-title">
+                <h3>Silla Wassily</h3>
+                <p>Marcel Breuer</p>
+              </div>
+              <div class="container__works--item-info">
+                <p>
+                  diseñada en 1925, revolucionó el mundo del diseño de muebles
+                  al ser una de las primeras piezas en utilizar tubos de acero
+                  cromado como estructura principal. Su diseño minimalista y
+                  funcional la han mantenido relevante y admirada hasta el día
+                  de hoy
+                </p>
+                <img
+                  src="assets/images/silla-wassily.jpg"
+                  alt="Silla Wassily"
+                />
+              </div>
+            </div>
+            <div class="container__works--item">
+              <div class="container__works--item-title">
+                <h3>Silla Bibendum</h3>
+                <p>Eileen Gray</p>
+              </div>
+              <div class="container__works--item-info">
+                <p>
+                  creada en 1926, impactó el diseño de muebles al fusionar
+                  formas curvas con materiales modernos como el acero tubular y
+                  el cuero acolchado. Su diseño ergonómico y su estética única
+                  la convirtieron en un ícono del siglo XX y continúa siendo una
+                  influencia en el diseño contemporáneo.
+                </p>
+                <img
+                  src="assets/images/silla-bibendum.jpg"
+                  alt="Silla Bibendum"
+                />
+              </div>
+            </div>
+            <div class="container__works--item">
+              <div class="container__works--item-title">
+                <h3>MR 10</h3>
+                <p>Mies van der Rohe</p>
+              </div>
+              <div class="container__works--item-info">
+                <p>
+                  diseñada por Ludwig Mies van der Rohe en 1927, es un hito en
+                  el diseño de mobiliario. Fabricada con una estructura de acero
+                  tubular cromado y asiento y respaldo de cuero o tela tenso,
+                  esta silla es un ejemplo de la filosofía "menos es más". Su
+                  diseño la convierte en una pieza que sigue siendo relevante en
+                  el diseño de interiores hasta el día de hoy.
+                </p>
+                <img src="assets/images/mr-10.jpg" alt="MR 10" />
+              </div>
+            </div>
+            <div class="container__works--item">
+              <div class="container__works--item-title">
+                <h3>Cesca Chair</h3>
+                <p>Marcel Breuer</p>
+              </div>
+              <div class="container__works--item-info">
+                <p>
+                  diseñada en 1928, destaca por su innovadora estructura de
+                  acero tubular cromado y asiento y respaldo de rejilla de
+                  caning, que combinan comodidad, elegancia y simplicidad. Su
+                  influencia perdura en el diseño contemporáneo, siendo un
+                  símbolo de la estética Bauhaus y del minimalismo funcional.
+                </p>
+                <img src="assets/images/cesca-chair.jpg" alt="Cesca Chair" />
+              </div>
+            </div>
+            <div class="container__works--item">
+              <div class="container__works--item-title">
+                <h3>Silla Basculante</h3>
+                <p>Le Corbusier</p>
+              </div>
+              <div class="container__works--item-info">
+                <p>
+                  La silla basculante de Le Corbusier es un diseño icónico que
+                  combina funcionalidad y estilo. Creada en la década de 1920
+                  destaca por su estructura de acero tubular, asiento y respaldo
+                  de cuero acolchado, y su capacidad de reclinación, lo que la
+                  convierte en una pieza emblemática del diseño moderno y del
+                  movimiento Bauhaus.
+                </p>
+                <img
+                  src="assets/images/silla-basculante.jpg"
+                  alt="Silla Basculante"
+                />
+              </div>
+            </div>
+            <div class="container__works--item">
+              <div class="container__works--item-title">
+                <h3>Silla Barcelona</h3>
+                <p>Mies van der Rohe y Lily Reich</p>
+              </div>
+              <div class="container__works--item-info">
+                <p>
+                  diseñada en 1929, es un ícono del diseño moderno. Con su
+                  estructura de acero inoxidable y su asiento y respaldo de
+                  cuero acolchado, esta silla destaca por su elegancia y
+                  simplicidad, convirtiéndola en una pieza del mobiliario
+                  contemporáneo y un símbolo de sofisticación y estilo.
+                </p>
+                <img
+                  src="assets/images/silla-barcelona.jpg"
+                  alt="Silla Barcelona"
+                />
+              </div>
+            </div>
+            <div class="container__works--item">
+              <div class="container__works--item-title">
+                <h3>Diván Barcelona</h3>
+                <p>Ludwig Mies van der Rohe y Lilly Reich</p>
+              </div>
+              <div class="container__works--item-info">
+                <p>
+                  El diván Barcelona, creado en 1930, es un ícono del diseño
+                  moderno. Con su estructura de acero inoxidable y cojín de
+                  cuero acolchado, representa la elegancia y simplicidad
+                  característica del movimiento Bauhaus
+                </p>
+                <img
+                  src="assets/images/divan-barcelona.jpg"
+                  alt="Diván Barcelona"
+                />
+              </div>
+            </div>
+            <div class="container__works--item">
+              <div class="container__works--item-title">
+                <h3>Mesa plegable</h3>
+                <p>Erich Brendel</p>
+              </div>
+              <div class="container__works--item-info">
+                <p>
+                  diseñada en los años 50, se destaca por su ingenioso mecanismo
+                  que ahorra espacio cuando no está en uso, siendo una opción
+                  práctica y versátil para espacios reducidos.
+                </p>
+                <img
+                  src="assets/images/mesa-plegable.jpg"
+                  alt="Mesa plegable"
+                />
+              </div>
+            </div>
+            <div class="container__works--item">
+              <div class="container__works--item-title">
+                <h3>Mesa Laccio</h3>
+                <p>Marcel Breuer y Mart Stam</p>
+              </div>
+              <div class="container__works--item-info">
+                <p>
+                  diseñada en 1925, destaca por su estructura de acero tubular y
+                  dos tableros rectangulares. Su diseño minimalista y funcional
+                  la convierte en un ícono del estilo Bauhaus y del diseño
+                  moderno.
+                </p>
+                <img src="assets/images/mesa-laccio.jpg" alt="Mesa Laccio" />
+              </div>
+            </div>
+            <div class="container__works--item">
+              <div class="container__works--item-title">
+                <h3>Nesting Tables</h3>
+                <p>Josef Albers</p>
+              </div>
+              <div class="container__works--item-info">
+                <p>
+                  La mesa nesting es una serie de mesas diseñadas con formas
+                  geométricas simples que pueden apilarse una dentro de la otra,
+                  ofreciendo practicidad y versatilidad en el uso del espacio.
+                </p>
+                <img
+                  src="assets/images/nesting-tables.jpg"
+                  alt="Nesting Tables"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/utils.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="assets/js/slick-custom.js"></script>
+    <script type="text/javascript" src="assets/js/utils.js"></script>
   </body>
 </html>
