--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="container__artists--list slick--artists">
             <div class="container__artists--card">
               <img
-                src="assets/images/walter-gropius.jpg"
+                src="assets/images/walter-gropius.webp"
                 alt="Walter Gropius"
               />
               <h3>Walter Gropius</h3>
@@ -143,8 +143,8 @@
             </div>
             <div class="container__artists--card">
               <img
-                src="assets/images/walter-gropius.jpg"
-                alt="Walter Gropius"
+                src="assets/images/wassily-kandinsky.webp"
+                alt="Wassily Kandinsky"
               />
               <h3>Wassily Kandinsky</h3>
               <p>
@@ -157,8 +157,8 @@
             </div>
             <div class="container__artists--card">
               <img
-                src="assets/images/walter-gropius.jpg"
-                alt="Walter Gropius"
+                src="assets/images/lyonel-feininger.webp"
+                alt="Lyonel Feininger"
               />
               <h3>Lyonel Feininger</h3>
               <p>
@@ -172,10 +172,7 @@
               </p>
             </div>
             <div class="container__artists--card">
-              <img
-                src="assets/images/walter-gropius.jpg"
-                alt="Walter Gropius"
-              />
+              <img src="assets/images/lilly-reich.webp" alt="Lilly Reich" />
               <h3>Lilly Reich</h3>
               <p>
                 Lilly Reich fue una diseñadora moderna alemana. Fue una de las
@@ -185,8 +182,8 @@
             </div>
             <div class="container__artists--card">
               <img
-                src="assets/images/walter-gropius.jpg"
-                alt="Walter Gropius"
+                src="assets/images/ludwig-mies-van-der-rohe.webp"
+                alt="Ludwig Mies Van der Rohe"
               />
               <h3>Ludwig Mies Van der Rohe</h3>
               <p>
@@ -217,10 +214,12 @@
                   funcional la han mantenido relevante y admirada hasta el día
                   de hoy
                 </p>
-                <img
-                  src="assets/images/silla-wassily.jpg"
-                  alt="Silla Wassily"
-                />
+                <div class="works--image">
+                  <img
+                    src="assets/images/silla-wassily.webp"
+                    alt="Silla Wassily"
+                  />
+                </div>
               </div>
             </div>
             <div class="container__works--item">
@@ -236,10 +235,12 @@
                   la convirtieron en un ícono del siglo XX y continúa siendo una
                   influencia en el diseño contemporáneo.
                 </p>
-                <img
-                  src="assets/images/silla-bibendum.jpg"
-                  alt="Silla Bibendum"
-                />
+                <div class="works--image">
+                  <img
+                    src="assets/images/silla-bibendum.webp"
+                    alt="Silla Bibendum"
+                  />
+                </div>
               </div>
             </div>
             <div class="container__works--item">
@@ -256,7 +257,9 @@
                   diseño la convierte en una pieza que sigue siendo relevante en
                   el diseño de interiores hasta el día de hoy.
                 </p>
-                <img src="assets/images/mr-10.jpg" alt="MR 10" />
+                <div class="works--image">
+                  <img src="assets/images/mr-10.webp" alt="MR 10" />
+                </div>
               </div>
             </div>
             <div class="container__works--item">
@@ -272,7 +275,9 @@
                   influencia perdura en el diseño contemporáneo, siendo un
                   símbolo de la estética Bauhaus y del minimalismo funcional.
                 </p>
-                <img src="assets/images/cesca-chair.jpg" alt="Cesca Chair" />
+                <div class="works--image">
+                  <img src="assets/images/cesca-chair.webp" alt="Cesca Chair" />
+                </div>
               </div>
             </div>
             <div class="container__works--item">
@@ -289,10 +294,12 @@
                   convierte en una pieza emblemática del diseño moderno y del
                   movimiento Bauhaus.
                 </p>
-                <img
-                  src="assets/images/silla-basculante.jpg"
-                  alt="Silla Basculante"
-                />
+                <div class="works--image">
+                  <img
+                    src="assets/images/silla-basculante.webp"
+                    alt="Silla Basculante"
+                  />
+                </div>
               </div>
             </div>
             <div class="container__works--item">
@@ -308,10 +315,12 @@
                   simplicidad, convirtiéndola en una pieza del mobiliario
                   contemporáneo y un símbolo de sofisticación y estilo.
                 </p>
-                <img
-                  src="assets/images/silla-barcelona.jpg"
-                  alt="Silla Barcelona"
-                />
+                <div class="works--image">
+                  <img
+                    src="assets/images/silla-barcelona.webp"
+                    alt="Silla Barcelona"
+                  />
+                </div>
               </div>
             </div>
             <div class="container__works--item">
@@ -326,10 +335,12 @@
                   cuero acolchado, representa la elegancia y simplicidad
                   característica del movimiento Bauhaus
                 </p>
-                <img
-                  src="assets/images/divan-barcelona.jpg"
-                  alt="Diván Barcelona"
-                />
+                <div class="works--image">
+                  <img
+                    src="assets/images/divan-barcelona.webp"
+                    alt="Diván Barcelona"
+                  />
+                </div>
               </div>
             </div>
             <div class="container__works--item">
@@ -343,10 +354,12 @@
                   que ahorra espacio cuando no está en uso, siendo una opción
                   práctica y versátil para espacios reducidos.
                 </p>
-                <img
-                  src="assets/images/mesa-plegable.jpg"
-                  alt="Mesa plegable"
-                />
+                <div class="works--image">
+                  <img
+                    src="assets/images/mesa-plegable.webp"
+                    alt="Mesa plegable"
+                  />
+                </div>
               </div>
             </div>
             <div class="container__works--item">
@@ -361,7 +374,9 @@
                   la convierte en un ícono del estilo Bauhaus y del diseño
                   moderno.
                 </p>
-                <img src="assets/images/mesa-laccio.jpg" alt="Mesa Laccio" />
+                <div class="works--image">
+                  <img src="assets/images/mesa-laccio.webp" alt="Mesa Laccio" />
+                </div>
               </div>
             </div>
             <div class="container__works--item">
@@ -375,10 +390,12 @@
                   geométricas simples que pueden apilarse una dentro de la otra,
                   ofreciendo practicidad y versatilidad en el uso del espacio.
                 </p>
-                <img
-                  src="assets/images/nesting-tables.jpg"
-                  alt="Nesting Tables"
-                />
+                <div class="works--image">
+                  <img
+                    src="assets/images/nesting-tables.webp"
+                    alt="Nesting Tables"
+                  />
+                </div>
               </div>
             </div>
           </div>
